# konsultprofiler

./: Generate MALL konsultprofil.docx  INSTRUCTION TO AI – GENERATE JSON.txt  Makefile  Mall 0.1.docx  Mall 0.2.docx  Mall 0.3.docx  Mall 0.4.docx  Mall 0.5.docx  README.md  analyze_template.py  anna_andersson.json  anna_andersson_profil.docx  app.py  create_template.py  example.json  generate_profile.py  jinjatillmall.txt  json_schema.json  konsultprofil_template.docx  mallexample.md  mattias larsen AI-transformation och implementering av generativ AI (GenAI) i stora organisationer.json  mattias larsen AI-transformation och implementering av generativ AI (GenAI) i stora organisationer_20250519_101258.docx  mattias larsen AI-transformation och implementering av generativ AI (GenAI) i stora organisationer_20250519_112358.docx  pyproject.toml  template_processor.py  test1.json  ~$ll 0.1.docx  ~$ll 0.2.docx  ~$ll 0.3.docx  ~$ll 0.4.docx  ~$na_andersson_profil.docx  ~$ttias larsen AI-transformation och implementering av generativ AI (GenAI) i stora organisationer_20250519_101258.docx  ~$ttias larsen AI-transformation och implementering av generativ AI (GenAI) i stora organisationer_20250519_112358.docx
Konsultprofiler/MattiasLarsen/: mattias larsen AI-transformation och implementering av generativ AI (GenAI) i stora organisationer.json
src/konsultprofiler/: __init__.py  app.py  gui.py  template_processor.py
