[project]
name = "konsultprofiler"
version = "0.1.0"
description = "A tool for analyzing and creating consultant profiles"
requires-python = ">=3.8"
dependencies = [
    "python-docx>=1.1.2",
    "docxtpl>=0.16.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [] 