[project]
name = "konsultprofiler"
version = "0.1.0"
description = "Ett verktyg för att generera konsultprofiler och Word-dokument"
requires-python = ">=3.8"
dependencies = [
    "docxtpl",
    "streamlit>=1.32.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/konsultprofiler"] 